unpackaged/main/default/objects/SBQQ__Quote__c/fields/Admin_Fee__c.field-meta.xml
<CustomField>
    <fullName>Admin_Fee__c</fullName>
    <formula>Administrative_Fee__c &gt; 0</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Admin Fee</label>
    <type>Checkbox</type>
</CustomField>