unpackaged/main/default/objects/SBQQ__Quote__c/fields/Administrative_Fee__c.field-meta.xml
<CustomField>
    <fullName>Administrative_Fee__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Administrative Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>