unpackaged/main/default/objects/SBQQ__Quote__c/fields/Allowance_Total__c.field-meta.xml
<CustomField>
    <fullName>Allowance_Total__c</fullName>
    <label>Allowance Total</label>
    <summarizedField>Trade_In__c.Allowance__c</summarizedField>
    <summaryForeignKey>Trade_In__c.Quote__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>