unpackaged/main/default/objects/SBQQ__Quote__c/fields/Amount_Due_on_Delivery__c.field-meta.xml
<CustomField>
    <fullName>Amount_Due_on_Delivery__c</fullName>
    <formula>Quote_Total__c  -  Deposit_with_Order__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amount Due on Delivery</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>