unpackaged/main/default/objects/SBQQ__Quote__c/fields/Amt_Due_Del_INTL__c.field-meta.xml
<CustomField>
    <fullName>Amt_Due_Del_INTL__c</fullName>
    <formula>Amount_Due_on_Delivery__c * Exchange_Rate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amount Due on Delivery</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>