unpackaged/main/default/objects/SBQQ__Quote__c/fields/Balance_Total__c.field-meta.xml
<CustomField>
    <fullName>Balance_Total__c</fullName>
    <label>Balance Total</label>
    <summarizedField>Trade_In__c.Balance_Owed__c</summarizedField>
    <summaryForeignKey>Trade_In__c.Quote__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>