unpackaged/main/default/objects/SBQQ__Quote__c/fields/Build_Type__c.field-meta.xml
<CustomField>
    <fullName>Build_Type__c</fullName>
    <label>Product Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>TRACK EQUIPMENT</fullName>
            </value>
            <value>
                <fullName>RAIL</fullName>
            </value>
            <value>
                <fullName>FORESTRY</fullName>
            </value>
            <value>
                <fullName>REFUSE</fullName>
            </value>
            <value>
                <fullName>To Be Defined</fullName>
            </value>
            <value>
                <fullName>OTHER TRUCKS</fullName>
            </value>
            <value>
                <fullName>CRANES</fullName>
            </value>
            <value>
                <fullName>UTILITY</fullName>
            </value>
            <value>
                <fullName>TELECOM</fullName>
            </value>
            <value>
                <fullName>PROPANE &amp; FUELS</fullName>
            </value>
            <value>
                <fullName>PULLING &amp; STRINGING</fullName>
            </value>
            <value>
                <fullName>DUMP TRUCKS</fullName>
            </value>
            <value>
                <fullName>BUILDING SUPPLY</fullName>
            </value>
            <value>
                <fullName>SERVICE TRUCKS</fullName>
            </value>
            <value>
                <fullName>CAB &amp; CHASSIS</fullName>
            </value>
            <value>
                <fullName>WATER TRUCKS</fullName>
            </value>
            <value>
                <fullName>TRAILERS</fullName>
            </value>
            <value>
                <fullName>VACUUM</fullName>
            </value>
            <value>
                <fullName>OTHER (NON-ADDRESSABLE)</fullName>
            </value>
            <value>
                <fullName>BUSINESS AREA_MASTER TXT</fullName>
                <isActive>false</isActive>
                <label>BUSINESS AREA_MASTER TXT</label>
            </value>
            <value>
                <fullName>Boom Truck</fullName>
                <isActive>false</isActive>
                <label>Boom Truck</label>
            </value>
            <value>
                <fullName>Box Truck</fullName>
                <isActive>false</isActive>
                <label>Box Truck</label>
            </value>
            <value>
                <fullName>Bucket Truck</fullName>
                <isActive>false</isActive>
                <label>Bucket Truck</label>
            </value>
            <value>
                <fullName>Chip Truck</fullName>
                <isActive>false</isActive>
                <label>Chip Truck</label>
            </value>
            <value>
                <fullName>Digger</fullName>
                <isActive>false</isActive>
                <label>Digger</label>
            </value>
            <value>
                <fullName>Dump Truck</fullName>
                <isActive>false</isActive>
                <label>Dump Truck</label>
            </value>
            <value>
                <fullName>Flatbed</fullName>
                <isActive>false</isActive>
                <label>Flatbed</label>
            </value>
            <value>
                <fullName>Fuel Truck</fullName>
                <isActive>false</isActive>
                <label>Fuel Truck</label>
            </value>
            <value>
                <fullName>Hooklift</fullName>
                <isActive>false</isActive>
                <label>Hooklift</label>
            </value>
            <value>
                <fullName>Hydrovac</fullName>
                <isActive>false</isActive>
                <label>Hydrovac</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>