unpackaged/main/default/objects/SBQQ__Quote__c/fields/Building_Materials__c.field-meta.xml
<CustomField>
    <fullName>Building_Materials__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Building Materials</label>
    <type>Checkbox</type>
</CustomField>