unpackaged/main/default/objects/SBQQ__Quote__c/fields/Change_Order_From_QL__c.field-meta.xml
<CustomField>
    <fullName>Change_Order_From_QL__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Change Order From QL</label>
    <type>Checkbox</type>
</CustomField>