unpackaged/main/default/objects/SBQQ__Quote__c/fields/Change_Order_Status__c.field-meta.xml
<CustomField>
    <fullName>Change_Order_Status__c</fullName>
    <label>Change Order Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Requested</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>