unpackaged/main/default/objects/SBQQ__Quote__c/fields/Combined_Custom_Unit_Specification__c.field-meta.xml
<CustomField>
    <fullName>Combined_Custom_Unit_Specification__c</fullName>
    <label>Combined Custom Unit Specification</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>