unpackaged/main/default/objects/SBQQ__Quote__c/fields/Conga_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Conga_Account_Name__c</fullName>
    <formula>SUBSTITUTE(SUBSTITUTE(SBQQ__Account__r.Name, "&amp;", "{~~~}" )," ","+")</formula>
    <label>Conga Account Name</label>
    <type>Text</type>
</CustomField>