unpackaged/main/default/objects/SBQQ__Quote__c/fields/Conga_RBO_Template_Id__c.field-meta.xml
<CustomField>
    <fullName>Conga_RBO_Template_Id__c</fullName>
    <formula>IF(FEVA_RBO__c,IF( Sales_Rep_s_Name__c &lt;&gt; "Paul Beck","0T_159EAA645379","0T_157EAA866080"),"0T_157EAA866080")</formula>
    <label>Conga RBO Template Id</label>
    <type>Text</type>
</CustomField>