unpackaged/main/default/objects/SBQQ__Quote__c/fields/Conga_Warranty_Templates__c.field-meta.xml
<CustomField>
    <fullName>Conga_Warranty_Templates__c</fullName>
    <label>Conga Warranty Templates</label>
    <length>255</length>
    <type>Text</type>
</CustomField>