unpackaged/main/default/objects/SBQQ__Quote__c/fields/Count_Presented_Line_Items__c.field-meta.xml
<CustomField>
    <fullName>Count_Presented_Line_Items__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Count Presented Line Items</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>