unpackaged/main/default/objects/SBQQ__Quote__c/fields/Count_RBO_In_Process_Line_Items__c.field-meta.xml
<CustomField>
    <fullName>Count_RBO_In_Process_Line_Items__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Count RBO In Process Line Items</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>