unpackaged/main/default/objects/SBQQ__Quote__c/fields/CPQ_Pricing_Edit__c.field-meta.xml
<CustomField>
    <fullName>CPQ_Pricing_Edit__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CPQ Pricing Edit</label>
    <type>Checkbox</type>
</CustomField>