unpackaged/main/default/objects/SBQQ__Quote__c/fields/Cranes__c.field-meta.xml
<CustomField>
    <fullName>Cranes__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cranes</label>
    <type>Checkbox</type>
</CustomField>