unpackaged/main/default/objects/SBQQ__Quote__c/fields/Created_From_Lead_Conversion__c.field-meta.xml
<CustomField>
    <fullName>Created_From_Lead_Conversion__c</fullName>
    <defaultValue>false</defaultValue>
    <description>toggled by flow when quote is created from lead conversion</description>
    <label>Created From Lead Conversion</label>
    <type>Checkbox</type>
</CustomField>