unpackaged/main/default/objects/SBQQ__Quote__c/fields/Default_RBO__c.field-meta.xml
<CustomField>
    <fullName>Default_RBO__c</fullName>
    <formula>AND( NOT(FEVA_RBO__c), NOT(Texas_RBO__c), NOT(Florida_RBO__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Default RBO</label>
    <type>Checkbox</type>
</CustomField>