unpackaged/main/default/objects/SBQQ__Quote__c/fields/Deposit_with_Order__c.field-meta.xml
<CustomField>
    <fullName>Deposit_with_Order__c</fullName>
    <defaultValue>0</defaultValue>
    <description>10% due (or $20,000) required with Custom Orders</description>
    <inlineHelpText>10% due (or $20,000) required with Custom Orders</inlineHelpText>
    <label>Deposit with Order</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>