unpackaged/main/default/objects/SBQQ__Quote__c/fields/dfscpq__CollectPayment__c.field-meta.xml
<CustomField>
    <fullName>dfscpq__CollectPayment__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether or not to collect payments after quote e-signature in DocuSign.</description>
    <label>Collect Payment</label>
    <type>Checkbox</type>
</CustomField>