unpackaged/main/default/objects/SBQQ__Quote__c/fields/dfscpq__SavePaymentMethod__c.field-meta.xml
<CustomField>
    <fullName>dfscpq__SavePaymentMethod__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether or not to save a payment method after quote e-signature in DocuSign.</description>
    <label>Save Payment Method</label>
    <type>Checkbox</type>
</CustomField>