unpackaged/main/default/objects/SBQQ__Quote__c/fields/Display_Add_on_and_Warranty_Price__c.field-meta.xml
<CustomField>
    <fullName>Display_Add_on_and_Warranty_Price__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Display Add-on Price</label>
    <type>Checkbox</type>
</CustomField>