unpackaged/main/default/objects/SBQQ__Quote__c/fields/Document_Type__c.field-meta.xml
<CustomField>
    <fullName>Document_Type__c</fullName>
    <label>Document Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Quote</fullName>
                <default>true</default>
                <label>Quote</label>
            </value>
            <value>
                <fullName>RBO - Kansas City</fullName>
            </value>
            <value>
                <fullName>RBO - FEVA</fullName>
            </value>
            <value>
                <fullName>RBO - Florida</fullName>
            </value>
            <value>
                <fullName>RBO - Texas</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>