unpackaged/main/default/objects/SBQQ__Quote__c/fields/Dump_Trucks__c.field-meta.xml
<CustomField>
    <fullName>Dump_Trucks__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Dump Trucks</label>
    <type>Checkbox</type>
</CustomField>