unpackaged/main/default/objects/SBQQ__Quote__c/fields/Exchange_Rate__c.field-meta.xml
<CustomField>
    <fullName>Exchange_Rate__c</fullName>
    <defaultValue>1</defaultValue>
    <label>Exchange Rate</label>
    <precision>14</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>