unpackaged/main/default/objects/SBQQ__Quote__c/fields/Federal_Excise_Tax__c.field-meta.xml
<CustomField>
    <fullName>Federal_Excise_Tax__c</fullName>
    <formula>SBQQ__NetAmount__c * 0.12</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Federal Excise Tax</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>