unpackaged/main/default/objects/SBQQ__Quote__c/fields/FEVA_RBO__c.field-meta.xml
<CustomField>
    <fullName>FEVA_RBO__c</fullName>
    <formula>AND( TEXT(SBQQ__SalesRep__r.Facility__c) = 'Lynchburg', NOT(Texas_RBO__c), NOT(Florida_RBO__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FEVA RBO</label>
    <type>Checkbox</type>
</CustomField>