unpackaged/main/default/objects/SBQQ__Quote__c/fields/FinanceOptions__c.field-meta.xml
<CustomField>
    <fullName>FinanceOptions__c</fullName>
    <label>Finance Options</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>