unpackaged/main/default/objects/SBQQ__Quote__c/fields/Financial_Company__c.field-meta.xml
<CustomField>
    <fullName>Financial_Company__c</fullName>
    <label>Name on Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>