unpackaged/main/default/objects/SBQQ__Quote__c/fields/Florida_RBO__c.field-meta.xml
<CustomField>
    <fullName>Florida_RBO__c</fullName>
    <formula>OR(AND(Tampa_Location__c, OR( AND(SBQQ__ShippingState__c = 'FL', Texas_Count__c = 0), Florida_Count__c &gt;0)), AND(ISPICKVAL( SBQQ__SalesRep__r.Facility__c , "Tampa"),Texas_Count__c = 0 ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Florida RBO</label>
    <type>Checkbox</type>
</CustomField>