unpackaged/main/default/objects/SBQQ__Quote__c/fields/Forestry__c.field-meta.xml
<CustomField>
    <fullName>Forestry__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Forestry</label>
    <type>Checkbox</type>
</CustomField>