unpackaged/main/default/objects/SBQQ__Quote__c/fields/Freight_2__c.field-meta.xml
<CustomField>
    <fullName>Freight_2__c</fullName>
    <label>Freight Total</label>
    <summarizedField>SBQQ__QuoteLine__c.Freight__c</summarizedField>
    <summaryFilterItems>
        <field>SBQQ__QuoteLine__c.Unit_Status__c</field>
        <operation>notEqual</operation>
        <value>Closed Lost</value>
    </summaryFilterItems>
    <summaryForeignKey>SBQQ__QuoteLine__c.SBQQ__Quote__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>