unpackaged/main/default/objects/SBQQ__Quote__c/fields/Freight_INTL__c.field-meta.xml
<CustomField>
    <fullName>Freight_INTL__c</fullName>
    <formula>Freight_2__c* Exchange_Rate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Freight Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>