unpackaged/main/default/objects/SBQQ__Quote__c/fields/Full_ID__c.field-meta.xml
<CustomField>
    <fullName>Full_ID__c</fullName>
    <description>Full ID</description>
    <formula>CASESAFEID(Id)</formula>
    <inlineHelpText>Full ID</inlineHelpText>
    <label>Full ID</label>
    <type>Text</type>
</CustomField>