unpackaged/main/default/objects/SBQQ__Quote__c/fields/hasDuplicateLines__c.field-meta.xml
<CustomField>
    <fullName>hasDuplicateLines__c</fullName>
    <defaultValue>false</defaultValue>
    <label>hasDuplicateLines</label>
    <type>Checkbox</type>
</CustomField>