unpackaged/main/default/objects/SBQQ__Quote__c/fields/Hide_Add_Product_Button__c.field-meta.xml
<CustomField>
    <fullName>Hide_Add_Product_Button__c</fullName>
    <formula>IF(
ISBLANK(Quote_Accepted_Date__c), 
TRUE,  

IF( AND(NOT(ISBLANK(Quote_Accepted_Date__c)),
OR(
CONTAINS($Profile.Name, 'Inside Sales'),
CONTAINS($Profile.Name, 'Sales Manager'),
CONTAINS($Profile.Name, 'Executive'),
CONTAINS($Profile.Name, 'System Administrator')
)) , TRUE, FALSE))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Hide Add Product Button</label>
    <type>Checkbox</type>
</CustomField>