unpackaged/main/default/objects/SBQQ__Quote__c/fields/IsMine__c.field-meta.xml
<CustomField>
    <fullName>IsMine__c</fullName>
    <formula>M3_Coordinator__c  = $User.Id ||
 OwnerId = $User.Id ||
 Quote_Request__r.Assigned_To__c  = $User.Id ||
 Quote_Request__r.Quote_By__c   = $User.Id</formula>
    <label>IsMine</label>
    <type>Checkbox</type>
</CustomField>