unpackaged/main/default/objects/SBQQ__Quote__c/fields/Lienholder__c.field-meta.xml
<CustomField>
    <fullName>Lienholder__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lienholder</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Address__c.Account__c</field>
            <operation>equals</operation>
            <valueField>$Source.SBQQ__Account__c</valueField>
        </filterItems>
        <filterItems>
            <field>Address__c.AddressType__c</field>
            <operation>equals</operation>
            <value>Lienholder</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Address__c</referenceTo>
    <relationshipLabel>Quotes (Lienholder)</relationshipLabel>
    <relationshipName>Quotes2</relationshipName>
    <type>Lookup</type>
</CustomField>