unpackaged/main/default/objects/SBQQ__Quote__c/fields/Lienholder_Address_for_RBO__c.field-meta.xml
<CustomField>
    <fullName>Lienholder_Address_for_RBO__c</fullName>
    <formula>IF(ISBLANK( Lienholder__c ),"No Lienholder", Lienholder__r.Name &amp;": "&amp;Lienholder__r.Street__c&amp; IF(ISNULL(Lienholder__r.AddressLine2__c),""," "&amp;Lienholder__r.AddressLine2__c)&amp;", "&amp; Lienholder__r.City__c &amp;", "&amp; TEXT(Lienholder__r.StateProvinceCode__c) &amp;" "&amp; Lienholder__r.ZipPostalCode__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lienholder Information</label>
    <type>Text</type>
</CustomField>