unpackaged/main/default/objects/SBQQ__Quote__c/fields/Lienholder_Name__c.field-meta.xml
<CustomField>
    <fullName>Lienholder_Name__c</fullName>
    <formula>IF(ISBLANK( Lienholder__c ),"",  Lienholder__r.Name)</formula>
    <label>Lienholder Name</label>
    <type>Text</type>
</CustomField>