unpackaged/main/default/objects/SBQQ__Quote__c/fields/Load_King__c.field-meta.xml
<CustomField>
    <fullName>Load_King__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Load King Trailers</label>
    <type>Checkbox</type>
</CustomField>