unpackaged/main/default/objects/SBQQ__Quote__c/fields/M3_Coordinator__c.field-meta.xml
<CustomField>
    <fullName>M3_Coordinator__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>M3 Coordinator</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Quotes1</relationshipName>
    <type>Lookup</type>
</CustomField>