unpackaged/main/default/objects/SBQQ__Quote__c/fields/Markup_Check__c.field-meta.xml
<CustomField>
    <fullName>Markup_Check__c</fullName>
    <formula>OR( SBQQ__CustomerDiscount__c &gt;= 10,  SBQQ__MarkupRate__c &lt; 12)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Markup Check</label>
    <type>Checkbox</type>
</CustomField>