unpackaged/main/default/objects/SBQQ__Quote__c/fields/MP_Buyer_Fee_Amt__c.field-meta.xml
<CustomField>
    <fullName>MP_Buyer_Fee_Amt__c</fullName>
    <formula>IF(ISPICKVAL(SBQQ__Type__c, "Marketplace"), Total_Act_QL_Amt__c  *  MP_Buyers_Fee_Per__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Marketplace Buyer Fee Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>