unpackaged/main/default/objects/SBQQ__Quote__c/fields/MP_Buyers_Fee_Per__c.field-meta.xml
<CustomField>
    <fullName>MP_Buyers_Fee_Per__c</fullName>
    <defaultValue>8/100</defaultValue>
    <label>Marketplace Buyer Fee %</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>