unpackaged/main/default/objects/SBQQ__Quote__c/fields/Net_Total__c.field-meta.xml
<CustomField>
    <fullName>Net_Total__c</fullName>
    <formula>SBQQ__NetAmount__c -  Net_Trade_In_Difference__c + Freight_2__c + Administrative_Fee__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Net Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>