unpackaged/main/default/objects/SBQQ__Quote__c/fields/Net_Trade_In_Difference__c.field-meta.xml
<CustomField>
    <fullName>Net_Trade_In_Difference__c</fullName>
    <formula>Allowance_Total__c - Balance_Total__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Net Trade-In Difference</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>