unpackaged/main/default/objects/SBQQ__Quote__c/fields/No_Admin_Fee__c.field-meta.xml
<CustomField>
    <fullName>No_Admin_Fee__c</fullName>
    <formula>Administrative_Fee__c = 0</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>No Admin Fee</label>
    <type>Checkbox</type>
</CustomField>