unpackaged/main/default/objects/SBQQ__Quote__c/fields/No_Trade_In__c.field-meta.xml
<CustomField>
    <fullName>No_Trade_In__c</fullName>
    <formula>Trade_In_Approved__c = 0</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>No Trade-In</label>
    <type>Checkbox</type>
</CustomField>