unpackaged/main/default/objects/SBQQ__Quote__c/fields/num_of_Used_Trucks__c.field-meta.xml
<CustomField>
    <fullName>num_of_Used_Trucks__c</fullName>
    <label># of Used Trucks</label>
    <summaryFilterItems>
        <field>SBQQ__QuoteLine__c.Condition2__c</field>
        <operation>notEqual</operation>
        <value>New</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>SBQQ__QuoteLine__c.Condition2__c</field>
        <operation>notEqual</operation>
        <value></value>
    </summaryFilterItems>
    <summaryForeignKey>SBQQ__QuoteLine__c.SBQQ__Quote__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>