unpackaged/main/default/objects/SBQQ__Quote__c/fields/Number_of_Units__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Units__c</fullName>
    <label>Number of Units</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>