unpackaged/main/default/objects/SBQQ__Quote__c/fields/of_Quote_Request__c.field-meta.xml
<CustomField>
    <fullName>of_Quote_Request__c</fullName>
    <defaultValue>0</defaultValue>
    <label># of Quote Request</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>