unpackaged/main/default/objects/SBQQ__Quote__c/fields/OFFHWY__c.field-meta.xml
<CustomField>
    <fullName>OFFHWY__c</fullName>
    <description>Counts the number of QLs showing as Off HWY</description>
    <label>OFFHWY</label>
    <summaryFilterItems>
        <field>SBQQ__QuoteLine__c.On_Hwy_Off_Road__c</field>
        <operation>equals</operation>
        <value>OFF-ROAD</value>
    </summaryFilterItems>
    <summaryForeignKey>SBQQ__QuoteLine__c.SBQQ__Quote__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>