unpackaged/main/default/objects/SBQQ__Quote__c/fields/Payer_Account__c.field-meta.xml
<CustomField>
    <fullName>Payer_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is created to supply Account Info to text field Payer, Under Invoice Section - Simplus</description>
    <inlineHelpText>This is lookup to Account record</inlineHelpText>
    <label>Payer(Account)</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Payer(Account)</relationshipLabel>
    <relationshipName>Quotes</relationshipName>
    <type>Lookup</type>
</CustomField>