unpackaged/main/default/objects/SBQQ__Quote__c/fields/Payer_Address__c.field-meta.xml
<CustomField>
    <fullName>Payer_Address__c</fullName>
    <formula>IF(Payer_Location__c = "", Payer_Account__r.BillingStreet &amp; ", " &amp; IF(Payer_Account__r.Billing_Street_Addr2__c = "","", Payer_Account__r.Billing_Street_Addr2__c &amp; ", ") &amp; Payer_Account__r.BillingCity &amp; "," &amp; TEXT(Payer_Account__r.BillingStateCode) &amp; " " &amp; Payer_Account__r.BillingPostalCode, Payer_Location__r.Street__c &amp; ", " &amp; IF(Payer_Location__r.AddressLine2__c = "","", Payer_Location__r.AddressLine2__c &amp; ", ") &amp; Payer_Location__r.City__c &amp; ", " &amp; TEXT(Payer_Location__r.StateProvinceCode__c) &amp; " " &amp; Payer_Location__r.ZipPostalCode__c )</formula>
    <label>Payer Address</label>
    <type>Text</type>
</CustomField>