unpackaged/main/default/objects/SBQQ__Quote__c/fields/Payer_Location__c.field-meta.xml
<CustomField>
    <fullName>Payer_Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Changed the filter from Quote:Account to Quote:Payer Account (new lookup field) . Case 00036147 - Simplus</description>
    <inlineHelpText>Address used for the Invoice of the trucks on this Quote. Default is the Payer Account's Billing Address.</inlineHelpText>
    <label>Payer Address</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Value does not exist or is not an address for the selected Account.</errorMessage>
        <filterItems>
            <field>Address__c.Account__c</field>
            <operation>equals</operation>
            <valueField>$Source.Payer_Account__c</valueField>
        </filterItems>
        <filterItems>
            <field>Address__c.AddressType__c</field>
            <operation>equals</operation>
            <value>Bill-To</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Address__c</referenceTo>
    <relationshipLabel>Quotes (Payer Address)</relationshipLabel>
    <relationshipName>Quotes1</relationshipName>
    <type>Lookup</type>
</CustomField>