unpackaged/main/default/objects/SBQQ__Quote__c/fields/Payer_Name__c.field-meta.xml
<CustomField>
    <fullName>Payer_Name__c</fullName>
    <formula>IF(Payer__c = "", SBQQ__Account__r.Name ,Payer__c)</formula>
    <label>Payer Name</label>
    <type>Text</type>
</CustomField>