unpackaged/main/default/objects/SBQQ__Quote__c/fields/Phone_Format__c.field-meta.xml
<CustomField>
    <fullName>Phone_Format__c</fullName>
    <formula>IF(
 LEN(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE( SBQQ__PrimaryContact__r.Phone , ".", ''),"-",""),"+",""))= 11,
 "("&amp;
 MID(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE( SBQQ__PrimaryContact__r.Phone , ".", ''),"-",""),"+",""),2,3)&amp;
 ") "&amp;
 MID(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE( SBQQ__PrimaryContact__r.Phone , ".", ''),"-",""),"+",""),5,3)&amp;
 "-"&amp;
 MID(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE( SBQQ__PrimaryContact__r.Phone , ".", ''),"-",""),"+",""),8,4),
 "("&amp;
 MID(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE( SBQQ__PrimaryContact__r.Phone , ".", ''),"-",""),"+",""),1,3)&amp;
 ") "&amp;
 MID(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE( SBQQ__PrimaryContact__r.Phone , ".", ''),"-",""),"+",""),4,3)&amp;
 "-"&amp;
 MID(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE( SBQQ__PrimaryContact__r.Phone , ".", ''),"-",""),"+",""),7,4)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Phone Format</label>
    <type>Text</type>
</CustomField>