unpackaged/main/default/objects/SBQQ__Quote__c/fields/Presented__c.field-meta.xml
<CustomField>
    <fullName>Presented__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Presented</label>
    <type>Checkbox</type>
</CustomField>